fix css bug on firefox

--- a/0/frontend/less/init.less
+++ b/0/frontend/less/init.less
@@ -155,7 +155,7 @@ productlist{
     }
   }
   .tools >*{
-    float:left;
+    display: inline-block;
     margin-right:1em;
   }
   .list table td{
